--- a/style.css
+++ b/style.css
@@ -42,7 +42,151 @@ body{
     height: 51px;
    
 }
+/* main section er kaj */
+main{
+    background-color:#E5E5E5;
+     height: 1200px; 
+    
+}
+.first-section,.last-section{
+    display:flex;
+    justify-content: center;
+   
+    
+}
+.top-player-blog, .lates-course{
+    width: 900px;
+    background-color: #FFFFFF;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+.top-player-title{
+    color: #562EFF;
+    margin-top: 26px;
+    margin-left: 33px;
+    font-size: 24px;
+}
+.top-players{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-row-gap: 33px;
+}
+.player-details{
+    margin-left: 35px;
+    display: flex;
+    align-items: center;
+    
+}
+.player-name{
+    color: #000000;
+    margin-left: 16px;
+}
+.player-details img{
+    width:56px;
+    height: 56px;
+}
+hr{
+    border: 1px solid #D1D1D1;
+    margin-left: 35px;
+    margin-top: 40px;
+    width: 820px;
+}
+.top-blogs{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-row-gap: 26px;
+}
+.blog{
+    margin-left: 35px;
+    display: flex;
+    
+}
+.blog-details{
+    margin-left: 22px;
+   
+}
+.blog-name{
+    color: #000000;
+    font-size: 20px;
+    margin-top:5px;
+    
+}
+.writer{
+    color:#9F9F9F ;
+   
+}
+.writer a{
+    color:#562EFF ;
+    text-decoration: none;
+    
+}
+.blog img{
+    width: 177px;
+    height: 117px;
+}
+
+/* main section er kaj sesh */
+
+/* last section er kaj suru */
+
+.lates-course{
+    height: 410px;
+}
+.all-course{
+    display: flex;
+    margin-left: 20px;
+}
+.course{
+    width: 300px;
+   
+}
+.course-details{
+    display: grid;
+    grid-template-columns: 120px 40px 140px;
+    
+    
+}
+.course img{
+    width: 266px;
+    height: 141px;
+}
+.course-name{
+    color: #000000;
+    width: 250px;
+}
+.course-icon{
+    color:#FFC014 ;
+}
+.course-rating{
+    color:#A2A2A2 ;
+    margin-top: 0px;
+}
+.course-time{
+    display: flex;
+    align-items: center;
+    margin-top: 0px;
+    width: 100px;
+    height: 30px;
+    border-radius: 15px;
+    background-color:#FFE4E8 ;
+    justify-content: center;
+   
+   
+}
+.time{
+    margin-left: 5px;
+}
+.course-writer,.course-time{
+    color:#ED6B4F ;
+}
+.fa-star.external{
+    color:#AEAEAE;
+}
+ 
 @media (max-width:688px) {
+        /* main{ 
+            height: 1800px;
+        } */
     .heading{
         width: 100%;
     }
@@ -54,5 +198,54 @@ body{
         margin-left: 20px;
         width: 230px;
     }
+    .top-players{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+    .all-course{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .top-player-blog{
+        width:400px;
+
+    }
     
+}
+@media (min-width:689px) and (max-width:990px) {
+    main{
+        
+        height: 1800px;
+    }
+   .heading{
+        width: 100%;
+    }
+    .icon-details{
+        margin-left: 50px;
+        width:110px;
+    }
+    .icon-bar{
+        margin-left: 200px;
+        width: 250px;
+    }
+    .top-player-blog{
+        width:700px;
+
+    }
+    .top-players{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+    }
+    .lates-course{
+        width: 700px;
+        height: 750px;
+
+    }
+    .all-course{
+        display: flex;
+        flex-wrap: wrap;
+        
+       
+    }
+
 }
